--- a/docs/index.css
+++ b/docs/index.css
@@ -26,6 +26,5 @@ img {
 .container {
   max-width: 700px;
   margin: 0 auto;
-  padding-top: 60px;
-  padding-bottom: 100px;
+  padding: 60px 10px 100px;
 }
