--- a/docs/welcome/index.css
+++ b/docs/welcome/index.css
@@ -28,3 +28,38 @@ img {
   margin: 0 auto;
   padding: 60px 10px 100px;
 }
+
+@keyframes slidein {
+    from {
+        top: 20px;
+    }
+
+    to {
+        top: 50px;
+    }
+}
+
+.tip {
+    display: none;
+    position: fixed;
+    top: 20px;
+    right: 120px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
+    width: 200px;
+    animation: 1s infinite alternate slidein;
+}
+
+.tip--visible {
+    display: flex;
+}
+
+.tip span {
+    font-size: 24px;
+}
+
+svg {
+    transform: rotate(-90deg);
+}
